<?xml version="1.0"?>
<package format="2">
  <name>topic_compressor</name>
  <version>0.1.0</version>
  <description>The topic_compressor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslz4</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslz4</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
